--- a/src/Veggy.Core.Tests/Veggy.Core.Tests.csproj
+++ b/src/Veggy.Core.Tests/Veggy.Core.Tests.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="EchoActorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
